# mcp-azresource

./: .gitignore  README.md  pyproject.toml
src/azure_resource_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python/azure_resource_mcp_server/: .env  __main__.py
